syntax = "proto3";

package pb;

option go_package = "./pb";

message User {
    string id = 1;
    string name= 2;
    string email = 3;
    string password = 4;
    int64 created = 5;
    int64 updated = 6;
}

message GetUserRequest {
    string id = 1;
}

message ListUsersRequest {}

message UpdateUserRequest {
    string name = 1;
    string id = 2;
}

message DeleteUserResponse {
    string id = 1;
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    User user = 1;
    string token = 2;
}

service AuthService {
    rpc SignUp(SignUpRequest) returns (User);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc GetUser(GetUserRequest) returns (User);
    rpc ListUsers(ListUsersRequest) returns (stream User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc DeleteUser(GetUserRequest) returns (DeleteUserResponse);
}